# nexhacks

./: .gitignore  CONTEXT.md  testapi.py  testmarket.py
chrome-extension/: README.md  manifest.json
chrome-extension/src/: background.js  contentScript.js
chrome-extension/src/injected/: overlay.css  overlay.js
chrome-extension/src/utils/: storage.js
client/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  test-fetch.js
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/lib/: api.ts  create_user_funds_table.sql  enable_public_read.sql  setup.sql  supabase.ts  update_funds_schema.sql  update_funds_schema_v2.sql  utils.ts  (+2 more)
server/: .dockerignore  Dockerfile  README.md  debug_api.py  debug_polymarket.py  debug_price.py  find_tag_by_market.py  package.json  pyproject.toml  test_tags.py
server/app/: main.py
server/app/agents/: allocator.py  clarifier.py  orchestrator.py  research.py
server/app/api/routes/: funds.py  health.py  portfolios.py  rebalance.py  users.py
server/app/cli/: run_rebalance.py
server/app/graphs/: state.py  supervisor_graph.py
server/app/schemas/: portfolio.py
server/app/services/: ai_enrichment.py  funds_svc.py  portfolio_registry.py
server/app/tools/news/: extract.py  search.py
server/app/tools/output/: formatter.py  generator.py
server/app/tools/polymarket/: clob_client.py  gamma_client.py
server/app/tools/risk/: constraints.py  sizing.py
server/app/utils/: ids.py  logger.py  stream.py
server/src/: index.ts
server/tests/: test_constraints.py  test_funds_svc.py  verify_weighting.py
(+83 files in other folders)
